--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
                   <br>
                   <b>Winner of BOP Challenge 2022 @ ECCV R6D Workshop.</b>
                   <br>
-                  <a href="https://arxiv.org/abs/2308.06383">arXiv</a>
+                  <a href="https://cmp.felk.cvut.cz/sixd/workshop_2022/slides/bop_challenge_2022_results.pdf">sides</a>
                   /
-                  <a href="https://github.com/ZhangCYG/U-RED">code</a>
+                  <a href="https://github.com/shanice-l/gdrnpp_bop2022">code</a>
                   <p></p>
                 </td>
               </tr>
