--- a/index.html
+++ b/index.html
@@ -26,16 +26,29 @@
               <tr style="padding:0px">
                 <td style="padding:2.5%;width:63%;vertical-align:middle">
                   <p style="text-align:center">
-                    <name>Ruida Zhang | 张睿达</name>
+                    <name>Ruida Zhang (张睿达)</name>
                   </p>
                   <p>I am a third-year Ph.D. student at <a href="https://www.tsinghua.edu.cn/en/">Tsinghua
                       University</a>,
                     supervised by Prof.
                     <a href="https://www.au.tsinghua.edu.cn/info/1166/2066.htm">Xiangyang Ji</a>.
                     Previously, I received my B.E. degree in Automation at Tsinghua University.
+                    <br>
+                    <br>
+                    My research interest lies in <b>3D computer vision</b>,
+                    including <b>object pose estimation, 3D reconstruction </b> and <b> scene understanding</b>.
+                    <br>
+                    <br>
+                    I served as a reviewer for CVPR, ICCV, ECCV, RAL, TIM.
+                    <br>
+                    <br>
+                    Currently, I am actively seeking <b> a one-year exchange opportunity</b>.
+                    I am eager to contribute to and learn from another research group.
+                    Please feel free to reach out.
+                    <br>
                   </p>
                   <p style="text-align:center">
-                    <a href="mailto:zhangrd21@mails.tsinghua.edu.cn">Email</a> &nbsp/&nbsp
+                    <a href="mailto:zhangrd23@mails.tsinghua.edu.cn">Email</a> &nbsp/&nbsp
                     <!-- <a href="data/JonBarron-CV.pdf">CV</a> &nbsp/&nbsp -->
                     <!-- <a href="data/JonBarron-bio.txt">Bio</a> &nbsp/&nbsp -->
                     <a href="https://scholar.google.com/citations?user=J4u6VicAAAAJ&hl=zh-CN">Google Scholar</a>
@@ -56,11 +69,8 @@
             <tbody>
               <tr>
                 <td style="padding:20px;width:100%;vertical-align:middle">
-                  <heading>Research</heading>
-                  <p>
-                    My research interest lies in 3D computer vision,
-                    including object & scene understanding and pose estimation.
-                  </p>
+                  <heading>Publications</heading>
+
                 </td>
               </tr>
             </tbody>
@@ -68,6 +78,53 @@
           <table
             style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
+            <tr onmouseout="malle_stop()" onmouseover="malle_start()">
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <img src='images/gpose.jpg' width="200">
+                </td>
+                <td style="padding:20px;width:75%;vertical-align:middle">
+                  <papertitle>
+                  GPose2023: A Modularized Learning-based Object Pose Estimator
+                  </papertitle>
+                  <br>
+                  <b>Ruida Zhang</b>,
+                  Ziqin Huang, Gu Wang, Xingyu Liu,
+                  Chenyangguang Zhang,
+                  Xiangyang Ji
+                  <br>
+                  <em>International Conference on Computer Vision Workshop (ICCVW)</em>, 2023
+                  <br>
+                  <b>Winner of BOP Challenge 2023 @ ICCV R6D Workshop. </b>
+                  <br>
+                  <a href="https://zhangcyg.github.io/figs/GPose_ICCV23.pdf">Slides</a>
+                  <p></p>
+                </td>
+              </tr>
+            <tr onmouseout="malle_stop()" onmouseover="malle_start()">
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <img src='images/ddfho.png' width="200">
+                </td>
+                <td style="padding:20px;width:75%;vertical-align:middle">
+                  <papertitle>
+                  DDF-HO: Hand-Held Object Reconstruction via Conditional Directed Distance Field
+                  </papertitle>
+                  <br>
+                  <a href="https://zhangcyg.github.io/">Chenyangguang Zhang*</a>,
+                  <a href="https://shangbuhuan13.github.io/">Yan Di*</a>,
+                  <b>Ruida Zhang*</b>,
+                  Guangyao Zhai,
+                  <a href="https://campar.in.tum.de/Main/FabianManhardt">Fabian Manhardt</a>,
+                  <a href="https://federicotombari.github.io/">Federico Tombari</a>,
+                  <a href="https://www.au.tsinghua.edu.cn/info/1166/2066.htm">Xiangyang Ji</a>
+                  <br>
+                  <em>37th Conference on Neural Information Processing Systems (NeurIPS)</em>, 2023
+                  <br>
+                  <a href="https://arxiv.org/abs/2308.08231">Paper</a>
+                  /
+                  <a href="https://github.com/ZhangCYG/DDFHO">Code</a>
+                  <p></p>
+                </td>
+              </tr>
               <tr onmouseout="malle_stop()" onmouseover="malle_start()">
                 <td style="padding:20px;width:25%;vertical-align:middle">
                   <img src='images/ured.png' width="200">
@@ -84,11 +141,11 @@
                   <a href="https://www.au.tsinghua.edu.cn/info/1166/2066.htm">Xiangyang Ji</a>,
                   <a href="https://federicotombari.github.io/">Federico Tombari</a>
                   <br>
-                  <em>ICCV</em>, 2023
+                  <em>International Conference on Computer Vision (ICCV)</em>, 2023
                   <br>
-                  <a href="https://arxiv.org/abs/2308.06383">arXiv</a>
+                  <a href="https://arxiv.org/abs/2308.06383">Paper</a>
                   /
-                  <a href="https://github.com/ZhangCYG/U-RED">code</a>
+                  <a href="https://github.com/ZhangCYG/U-RED">Code</a>
                   <p></p>
                 </td>
               </tr>
@@ -105,13 +162,13 @@
                   Chenyangguang Zhang, Bowen Fu, Jiwen Tang, Xiquan Liang, Jingyi Tang, Xiaotian Cheng, Yukang
                   Zhang, Gu Wang, Xiangyang Ji
                   <br>
-                  <em>ECCVW</em>, 2023
+                  <em>European Conference on Computer Vision WorkShop (ECCVW)</em>, 2022
                   <br>
                   <b>Winner of BOP Challenge 2022 @ ECCV R6D Workshop.</b>
                   <br>
-                  <a href="https://cmp.felk.cvut.cz/sixd/workshop_2022/slides/bop_challenge_2022_results.pdf">sides</a>
+                  <a href="https://cmp.felk.cvut.cz/sixd/workshop_2022/slides/bop_challenge_2022_results.pdf">Slides</a>
                   /
-                  <a href="https://github.com/shanice-l/gdrnpp_bop2022">code</a>
+                  <a href="https://github.com/shanice-l/gdrnpp_bop2022">Code</a>
                   <p></p>
                 </td>
               </tr>
@@ -130,11 +187,11 @@
                   <a href="https://federicotombari.github.io/">Federico Tombari</a>,
                   <a href="https://www.au.tsinghua.edu.cn/info/1166/2066.htm">Xiangyang Ji</a>
                   <br>
-                  <em>ECCV</em>, 2022
+                  <em>European Conference on Computer Vision (ECCV)</em>, 2022
                   <br>
-                  <a href="https://arxiv.org/pdf/2208.00237">arXiv</a>
+                  <a href="https://arxiv.org/pdf/2208.00237">Paper</a>
                   /
-                  <a href="https://github.com/lolrudy/RBP_Pose">code</a>
+                  <a href="https://github.com/lolrudy/RBP_Pose">Code</a>
                   <p></p>
                   <!-- <p>
               We utilize shape prior adaptation to enable guide bounding box prediction, .
@@ -156,9 +213,9 @@
                   <a href="https://www.au.tsinghua.edu.cn/info/1166/2066.htm">Xiangyang Ji</a>
 
                   <br>
-                  <em>IROS</em>, 2022
+                  <em>IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</em>, 2022
                   <br>
-                  <a href="https://arxiv.org/abs/2208.06661">arXiv</a>
+                  <a href="https://arxiv.org/abs/2208.06661">Paper</a>
                   <p></p>
                   <!-- <p>
                 We integrate category-level shape prior into direct pose estimation to improve performance while maitainng real-time inference speed.
@@ -181,14 +238,12 @@
                   <a href="https://campar.in.tum.de/Main/NassirNavabCv">Nassir Navab</a>
                   <a href="https://federicotombari.github.io/">Federico Tombari</a>
                   <br>
-                  <em>CVPR</em>, 2022
+                  <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)</em>, 2022
                   <br>
                   <a
                     href="https://openaccess.thecvf.com/content/CVPR2022/papers/Di_GPV-Pose_Category-Level_Object_Pose_Estimation_via_Geometry-Guided_Point-Wise_Voting_CVPR_2022_paper.pdf">Paper</a>
                   /
-                  <a href="https://arxiv.org/pdf/2203.07918">arXiv</a>
-                  /
-                  <a href="https://github.com/lolrudy/GPV_Pose">code</a>
+                  <a href="https://github.com/lolrudy/GPV_Pose">Code</a>
                   <p></p>
                   <!-- <p>
               We employ point-wise bounding box voting to improve the performance of category-level object pose estimation.
