--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                   <p>I am a third-year Ph.D. student at <a href="https://www.tsinghua.edu.cn/en/">Tsinghua
                       University</a>,
                     supervised by Prof.
-                    <a href="https://www.au.tsinghua.edu.cn/info/1166/2066.htm">Xiangyang Ji</a>.
-                    Previously, I received my B.E. degree in Automation at Tsinghua University.
+                    <a href="https://www.au.tsinghua.edu.cn/info/1111/1524.htm">Xiangyang Ji</a>.
+                    Previously, I received my B.E. degree in Automation Engineering at Tsinghua University.
                     <br>
                     <br>
                     My research interest lies in <b>3D computer vision</b>,
@@ -115,7 +115,7 @@
                   Guangyao Zhai,
                   <a href="https://campar.in.tum.de/Main/FabianManhardt">Fabian Manhardt</a>,
                   <a href="https://federicotombari.github.io/">Federico Tombari</a>,
-                  <a href="https://www.au.tsinghua.edu.cn/info/1166/2066.htm">Xiangyang Ji</a>
+                  <a href="https://www.au.tsinghua.edu.cn/info/1111/1524.htm">Xiangyang Ji</a>
                   <br>
                   <em>37th Conference on Neural Information Processing Systems (NeurIPS)</em>, 2023
                   <br>
@@ -138,7 +138,7 @@
                   <b>Ruida Zhang*</b>,
                   <a href="https://campar.in.tum.de/Main/FabianManhardt">Fabian Manhardt</a>,
                   Yongzhi Su, Jason Rambach,
-                  <a href="https://www.au.tsinghua.edu.cn/info/1166/2066.htm">Xiangyang Ji</a>,
+                  <a href="https://www.au.tsinghua.edu.cn/info/1111/1524.htm">Xiangyang Ji</a>,
                   <a href="https://federicotombari.github.io/">Federico Tombari</a>
                   <br>
                   <em>International Conference on Computer Vision (ICCV)</em>, 2023
@@ -185,7 +185,7 @@
                   Zhiqiang Lou,
                   <a href="https://campar.in.tum.de/Main/FabianManhardt">Fabian Manhardt</a>,
                   <a href="https://federicotombari.github.io/">Federico Tombari</a>,
-                  <a href="https://www.au.tsinghua.edu.cn/info/1166/2066.htm">Xiangyang Ji</a>
+                  <a href="https://www.au.tsinghua.edu.cn/info/1111/1524.htm">Xiangyang Ji</a>
                   <br>
                   <em>European Conference on Computer Vision (ECCV)</em>, 2022
                   <br>
@@ -210,7 +210,7 @@
                   <a href="https://scholar.google.com/citations?hl=zh-CN&user=HSlGGvwAAAAJ">Yan Di*</a>,
                   <a href="https://campar.in.tum.de/Main/FabianManhardt">Fabian Manhardt</a>,
                   <a href="https://federicotombari.github.io/">Federico Tombari</a>,
-                  <a href="https://www.au.tsinghua.edu.cn/info/1166/2066.htm">Xiangyang Ji</a>
+                  <a href="https://www.au.tsinghua.edu.cn/info/1111/1524.htm">Xiangyang Ji</a>
 
                   <br>
                   <em>IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</em>, 2022
@@ -234,7 +234,7 @@
                   <b>Ruida Zhang*</b>,
                   Zhiqiang Lou,
                   <a href="https://campar.in.tum.de/Main/FabianManhardt">Fabian Manhardt</a>,
-                  <a href="https://www.au.tsinghua.edu.cn/info/1166/2066.htm">Xiangyang Ji</a>,
+                  <a href="https://www.au.tsinghua.edu.cn/info/1111/1524.htm">Xiangyang Ji</a>,
                   <a href="https://campar.in.tum.de/Main/NassirNavabCv">Nassir Navab</a>
                   <a href="https://federicotombari.github.io/">Federico Tombari</a>
                   <br>
