--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     including <b>object pose estimation, 3D reconstruction </b> and <b> scene understanding</b>.
                     <br>
                     <br>
-                    I served as a reviewer for CVPR, ICCV, ECCV, RAL, TIM.
+                    I served as a reviewer for CVPR, ICCV, ECCV, RAL, TCSVT, TIM.
                     <br>
                     <br>
                     Currently, I am actively seeking <b> a one-year exchange opportunity</b>.
@@ -64,6 +64,27 @@
               </tr>
             </tbody>
           </table>
+
+          <heading>News</heading>
+          <ul>
+          <li>[2024.02] 4 papers are accepted to <b>CVPR2024</b>.
+          KP-RED and ShapeMaker focus on joint shape canonicalization, segmentation, retrieval and deformation. 
+          SecondPose outperforms competitors on category-level pose estimation. 
+          MOHO leverages multi-view information for hand-held object reconstruction.
+          </li>
+          <li>
+            [2023.10] Our work GPose2023 <b>wins BOP Challenge 2023</b>, ICCV R6D Workshop. 
+          </li>
+          <li>
+          [2023.09] Our paper DDF-HO on hand-held object reconstruction is accepted to <b>NeurIPS2023</b>.
+          </li>
+          <li>
+          [2023.07] Our paper U-RED on unsupervised shape retrieval and deformation is accepted to <b>ICCV2023</b>.
+        </li>
+        <li>
+          [2022.06] Our category-level pose estimation works GPV-Pose, RBP-Pose, SSP-Pose are accepted to <b>CVPR2022, ECCV2022, IROS2022</b> respectively.
+        </li>  
+        </ul>
           <table
             style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
