--- a/index.html
+++ b/index.html
@@ -41,11 +41,6 @@
                     <br>
                     I served as a reviewer for CVPR, ICCV, ECCV, RAL, TCSVT, TIM.
                     <br>
-                    <br>
-                    Currently, I am actively seeking <b> a one-year exchange opportunity</b>.
-                    I am eager to contribute to and learn from another research group.
-                    Please feel free to reach out.
-                    <br>
                   </p>
                   <p style="text-align:center">
                     <a href="mailto:zhangrd23@mails.tsinghua.edu.cn">Email</a> &nbsp/&nbsp
@@ -100,6 +95,57 @@
             style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
             <tr onmouseout="malle_stop()" onmouseover="malle_start()">
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <img src='images/kpred.png' width="200">
+                </td>
+                <td style="padding:20px;width:75%;vertical-align:middle">
+                  <papertitle>
+                  KP-RED: Exploiting Semantic Keypoints for Joint 3D Shape Retrieval and Deformation
+                  </papertitle>
+                  <br>
+                  <b>Ruida Zhang</b>*,
+                  Chenyangguang Zhang*, Yan Di, Fabian Manhardt, Xingyu Liu, Federico Tombari, Xiangyang Ji
+                  <br>
+                  <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)</em>, 2024
+                  <br>
+                  <a href="https://arxiv.org/pdf/2403.10099.pdf">Paper</a>
+                  <p></p>
+                </td>
+              </tr>
+              <tr onmouseout="malle_stop()" onmouseover="malle_start()">
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <img src='images/shapematcher.png' width="200">
+                </td>
+                <td style="padding:20px;width:75%;vertical-align:middle">
+                  <papertitle>
+                    ShapeMatcher: Self-Supervised Joint Shape Canonicalization, Segmentation, Retrieval and Deformation
+                  </papertitle>
+                  <br>
+                  Yan Di, Chenyangguang Zhang, Chaowei Wang, <b>Ruida Zhang</b>, Guangyao Zhai, Yanyan Li, Bowen Fu, Xiangyang Ji, Shan Gao
+                  <br>
+                  <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)</em>, 2024
+                  <br>
+                  <a href="https://arxiv.org/abs/2311.11106">Paper</a>
+                  <p></p>
+                </td>
+              </tr>
+              <tr onmouseout="malle_stop()" onmouseover="malle_start()">
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <img src='images/moho.png' width="200">
+                </td>
+                <td style="padding:20px;width:75%;vertical-align:middle">
+                  <papertitle>
+                    MOHO: Learning Single-view Hand-held Object Reconstruction with Multi-view Occlusion-Aware Supervision
+                  </papertitle>
+                  <br>
+                  Chenyangguang Zhang, Guanlong Jiao, Yan Di, Gu Wang, Ziqin Huang, <b>Ruida Zhang</b>, Fabian Manhardt, Bowen Fu, Federico Tombari, Xiangyang Ji                  <br>
+                  <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)</em>, 2024
+                  <br>
+                  <a href="https://arxiv.org/abs/2310.11696">Paper</a>
+                  <p></p>
+                </td>
+              </tr>
+              <tr onmouseout="malle_stop()" onmouseover="malle_start()">
                 <td style="padding:20px;width:25%;vertical-align:middle">
                   <img src='images/gpose.jpg' width="200">
                 </td>
