--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
 
           <heading>News</heading>
           <ul>
+            <li>
+              [2024.07] 1 paper is accepted to <b>ECCV2024</b>.
+          </li>
           <li>[2024.02] 4 papers are accepted to <b>CVPR2024</b>.
           KP-RED and ShapeMaker focus on joint shape canonicalization, segmentation, retrieval and deformation. 
           SecondPose outperforms competitors on category-level pose estimation. 
